2008-03-28 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix Issue 80 doing correct undo move.
	* po/de.po
	* po/labyrinth.pot
	Update german translation.

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/labyrinth.py
	o check for pygtk version before gtk is imported like it is
	said in the pygtk FAQ, fixes Issue 82

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc7

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/Makefile.am
	o add missing file for distribution creation

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* src/MapList.py
	o fix renaming of thought
	* src/Browser.py
	o raise a AttributeError instead of a deprecated String

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc6

2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Sync with trunk. Added selection box.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	* src/MMapArea.py
	* src/BaseThought.py
	* src/MainWindow.py
	* src/TextBufferMarkup.py
	o add font selection support for thoughts, fixes issue 79
	o change attributes instead of inserting, fixes hopefully issue 53

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc5

2008-03-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/utils.py
	* src/MapList.py
	* src/MainWindow.py
	* src/Browser.py
	* src/ImageThought.py
	* po/de.po
	* po/labyrinth.pot
	Export maps with images as tarball. Sync with trunk.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/ImageThought.py
	* src/TextThought.py
	* src/DrawingThought.py
	* src/utils.py
	o show a bigger border if a thought has extended info, fixes issue 33

2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	More optimizations for issue 55. Partial redraw is done on editing and